[gd_scene load_steps=11 format=2]

[ext_resource path="res://Characters/Enemies/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Characters/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Enemies/AggroRadius.gd" type="Script" id=4]
[ext_resource path="res://Collisions/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Enemies/Collider.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 698.264

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 8 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 5 )]
visible = true

[node name="AggroRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRadius"]
shape = SubResource( 4 )
disabled = true

[node name="AggroRadiusTimer" type="Timer" parent="AggroRadius"]

[node name="Collider" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
base_movement_speed = 25

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="AggroRadius" to="." method="_on_AggroRadius_body_entered"]
[connection signal="body_entered" from="AggroRadius" to="AggroRadius" method="_on_AggroRadius_body_entered"]
[connection signal="timeout" from="AggroRadius/AggroRadiusTimer" to="AggroRadius" method="_on_AggroRadiusTimer_timeout"]
[connection signal="zero_health" from="Stats" to="." method="_on_Stats_zero_health"]
